.config/waybar/style.css
* {
    border: none;
    border-radius: 0;
    font-family: Cartograph CF Nerd Font, monospace;
    font-weight: bold;
    font-size: 14px;
    min-height: 0;
}

window#waybar {
    background: rgba(21, 18, 27, 0);
    color: #cdd6f4;
}

tooltip {
    background: #1e1e2e;
    border-radius: 10px;
    border-width: 2px;
    border-style: solid;
    border-color: #11111b;
}

#workspaces button {
    padding: 5px;
    color: #313244;
    margin-right: 5px;
}

#workspaces button.active {
    color: #a6adc8;
}

#workspaces button.focused {
    color: #a6adc8;
    background: #eba0ac;
    border-radius: 10px;
}

#workspaces button.urgent {
    color: #11111b;
    background: #a6e3a1;
    border-radius: 10px;
}

#workspaces button:hover {
    background: #11111b;
    color: #cdd6f4;
    border-radius: 10px;
}

#custom-playerctl,
#idle_inhibitor,
#custom-weather,
#window,
#clock,
#battery,
#upower,
#custom-mobilebattery,
#wireplumber,
#pulseaudio,
#network,
#workspaces,
#tray,
#backlight {
    background: #1e1e2e;
    padding: 0px 10px;
    margin: 3px 0px;
    margin-top: 10px;
    border: 1px solid #181825;
}

#tray {
    border-radius: 10px;
    margin-right: 10px;
}

#workspaces {
    background: #1e1e2e;
    border-radius: 10px;
    margin-left: 10px;
    padding-right: 0px;
    padding-left: 5px;
}

#idle_inhibitor {
    color: #89dceb;
    border-radius: 10px 10px 10px 10px;
    margin-left:  10px;
    font-size: 18px;
}

#custom-playerctl {
    color: #f5c2e7;
    border-radius: 10px;
    margin-left: 5px;
    border-left: 0px;
    border-right: 0px;
}


#window {
    border-radius: 10px;
    margin-left: 10px;
    margin-right: 10px;
}

#clock {
    color: #fab387;
    border-radius: 10px;
    margin-left: 5px;
    border-right: 0px;
}

#network {
    color: #f9e2af;
    border-radius: 10px;
    border-left: 5px;
    border-right: 5px;
    font-size: 10px;
    margin-right: 5px;

}

#wireplumber {
    color: #89b4fa;
    border-left: 0px;
    border-right: 0px;
}

#pulseaudio.microphone {
    color: #cba6f7;
    border-radius: 0px 10px 10px 0px;
    border-left: 0px;
    border-right: 0px;
    margin-right: 5px;
}

#battery {
    color: #a6e3a1;
    border-radius: 10px 0 0 10px;
    margin-right: 0px;
    border-left: 0px;
}

#upower {
    color: #a6e3a1;
    border-radius: 10px 0 0 10px;
    margin-right: 0px;
    border-left: 0px;
}


#custom-mobilebattery {
    color: #a6e3a1;
    /*border-radius: 10px 10px 10px 10px;*/
    margin-right: 0px;
    border-left: 0px;
}

#custom-weather {
    border-radius: 0px 10px 10px 0px;
    border-right: 0px;
    margin-left: 0px;
}

